@@ -12,6 +12,10 @@ ExecBuilder
 ----------------------
 * Log exceptions coming back from the ScriptRunner.
 
+TimeBuild
+----------------------
+* Fix bug where more than 1 day had elapsed since the last build. Reported by Nhat Tran
+
 XcodeBuilder
 ----------------------
 * Fix bug with using nested arguments. XcodeBuilder.Arg was not public.
